--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 9</title>
+    <title>Color switcher&Countdown timer&Promise generator</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
+    <h1>Please click on the required link</h1>
     <ul>
       <li><a href="01-color-switcher.html">Color switcher</a></li>
       <li><a href="02-timer.html">Countdown timer</a></li>
